WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210065
[iOS] Transition most process assertions to RunningBoard
https://bugs.webkit.org/show_bug.cgi?id=210065
Summary
[iOS] Transition most process assertions to RunningBoard
Chris Dumez
Reported
2020-04-06 12:48:08 PDT
Transition most process assertions to RunningBoard, instead of legacy BKSProcessAssertion. The only assertion that still uses BKSProcessAssertion is the MediaPlayback once because we do not have a RunningBoard equivalent for this one yet (see <
rdar://problem/61263147
>).
Attachments
Patch
(10.02 KB, patch)
2020-04-06 13:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.27 KB, patch)
2020-04-06 14:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.75 KB, patch)
2020-04-06 14:31 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.18 KB, patch)
2020-04-06 14:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.01 KB, patch)
2020-04-06 15:55 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.03 KB, patch)
2020-04-06 16:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-06 12:48:26 PDT
<
rdar://problem/61354901
>
Chris Dumez
Comment 2
2020-04-06 13:34:21 PDT
Created
attachment 395613
[details]
Patch
Chris Dumez
Comment 3
2020-04-06 14:09:47 PDT
Created
attachment 395616
[details]
Patch
Chris Dumez
Comment 4
2020-04-06 14:31:17 PDT
Created
attachment 395618
[details]
Patch
Chris Dumez
Comment 5
2020-04-06 14:49:15 PDT
Created
attachment 395620
[details]
Patch
Chris Dumez
Comment 6
2020-04-06 15:55:53 PDT
Created
attachment 395627
[details]
Patch
Chris Dumez
Comment 7
2020-04-06 16:07:53 PDT
Created
attachment 395628
[details]
Patch
Geoffrey Garen
Comment 8
2020-04-06 16:20:47 PDT
Comment on
attachment 395628
[details]
Patch r=me
Chris Dumez
Comment 9
2020-04-06 16:26:04 PDT
Comment on
attachment 395628
[details]
Patch Clearing flags on attachment: 395628 Committed
r259610
: <
https://trac.webkit.org/changeset/259610
>
Chris Dumez
Comment 10
2020-04-06 16:26:06 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 11
2020-04-07 08:23:55 PDT
Follow-up landed in <
https://trac.webkit.org/changeset/259635
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug