Source/WebKit/Platform/spi/ios/RunningBoardServicesSPI.h
@@ -42,15 +42,17 @@
 + (RBSTarget *)targetWithPid:(pid_t)pid;
 @end
 
+@protocol RBSAssertionObserving <NSObject>
+- (void)assertionWillInvalidate:(RBSAssertion *)assertion;
+- (void)assertion:(RBSAssertion *)assertion didInvalidateWithError:(NSError *)error;
+@end
+
 @interface RBSAssertion : NSObject
 - (instancetype)initWithExplanation:(NSString *)explanation target:(RBSTarget *)target attributes:(NSArray <RBSAttribute *> *)attributes;
 - (BOOL)acquireWithError:(NSError **)error;
 - (void)invalidate;
-@end
-
-@protocol RBSAssertionObserving <NSObject>
-- (void)assertionWillInvalidate:(RBSAssertion *)assertion;
-- (void)assertion:(RBSAssertion *)assertion didInvalidateWithError:(NSError *)error;
+- (void)addObserver:(id <RBSAssertionObserving>)observer;
+- (void)removeObserver:(id <RBSAssertionObserving>)observer;
 @end
 
 #endif
